--- a/ksutils/build.gradle
+++ b/ksutils/build.gradle
@@ -23,19 +23,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
 
-    api 'com.github.ar-android:AQuery:1.0.3'
-
-    api 'com.pixplicity.easyprefs:library:1.9.0'
-
-    api 'com.google.code.gson:gson:2.8.6'
-    api 'com.squareup.okhttp3:okhttp:4.9.0'
-    api('com.squareup.retrofit2:retrofit:2.9.0') {
-        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
+    api ('com.github.ar-android:AQuery:1.0.3'){
+        exclude group: 'com.github.bumptech.glide', module: 'glide'
     }
+    api 'com.pixplicity.easyprefs:library:1.9.0'
+    api 'com.google.code.gson:gson:2.8.6'
+    api 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
     api 'com.squareup.retrofit2:converter-scalars:2.9.0'
-
     api 'com.github.satyan:sugar:1.5'
 }
